--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -29,7 +29,7 @@
   <div class="col-8 offset-2 mb-3">
     <hr />
     <h4>Leave a Review</h4>
-    <form>
+    <form action="/listings/<%= listing.id %>/reviews" method="POST">
       <div class="mb-3 mt-3">
         <label for="rating" class="form-lable">Rating</label>
         <input
