--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,16 +1,20 @@
 <footer>
-    <div class="f-info">
-        <div class="f-info-social">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-square-linkedin"></i>
-            <i class="fa-brands fa-square-x-twitter"></i>
-   
-        </div>
-        <div class="f-info-brand">&copy; Wonderlust Private Limited</div>
-        <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
-        </div>
+  <div class="f-info">
+    <!-- Social icons -->
+    <div class="f-info-social">
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-square-instagram"></i>
+      <i class="fa-brands fa-square-linkedin"></i>
+      <i class="fa-brands fa-square-x-twitter"></i>
     </div>
+
+    <!-- Brand -->
+    <div class="f-info-brand">&copy; Wonderlust Private Limited</div>
+
+    <!-- Links -->
+    <div class="f-info-links">
+      <a href="/privacy">Privacy</a>
+      <a href="/terms">Terms</a>
+    </div>
+  </div>
 </footer>
