--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -38,9 +38,9 @@
     <%- include("../includes/navbar.ejs") %>
 
     <!-- Page content -->
-    <div class="container mt-4">
+    <main class="flex-grow-1 container mt-4">
       <%- include("../includes/flash.ejs") %> <%- body %>
-    </div>
+    </main>
 
     <!-- Footer include -->
     <%- include("../includes/footer.ejs") %>
