--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,22 +1,27 @@
 <% layout("/layouts/boilerplate") %>
+
 <div class="row">
   <div class="col-8 offset-2">
     <h3><%= listing.title %></h3>
+
     <div class="card show-card listing-card">
       <img
-        src="<%= listing.image?.url || '/images/default.jpg' %>"
+        src="<%= listing.image.url || '/images/default.jpg' %>"
         class="card-img-top show-img"
         alt="<%= listing.title %>"
       />
       <div class="card-body">
+        <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+        <p class="card-text"><%= listing.description %></p>
         <p class="card-text">
-          <%= listing.description %><br />
-          &#8377; <%= listing.price?.toLocaleString("en-IN") || 0 %><br />
-          <%= listing.location %><br />
-          <%= listing.country %>
+          &#8377; <%= listing.price?.toLocaleString("en-IN") || 0 %>
         </p>
+        <p class="card-text"><%= listing.location %></p>
+        <p class="card-text"><%= listing.country %></p>
       </div>
     </div>
+
+    <% if (currUser && listing.owner._id.equals(currUser._id)) { %>
     <div class="mt-3 d-flex justify-content-between">
       <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn"
         >Edit</a
@@ -25,8 +30,11 @@
         <button class="btn btn-dark">Delete</button>
       </form>
     </div>
+    <% } %>
   </div>
+
   <div class="col-8 offset-2 mb-3">
+    <% if (currUser) { %>
     <hr />
     <h4>Leave a Review</h4>
     <form
@@ -36,18 +44,56 @@
       class="needs-validation"
     >
       <div class="mb-3 mt-3">
-        <label for="rating" class="form-lable">Rating</label>
-        <input
-          type="range"
-          min="1"
-          max="5"
-          id="rating"
-          name="review[rating]"
-          class="form-range"
-        />
+        <label for="rating" class="form-label">Rating</label>
+        <fieldset class="starability-slot">
+          <input
+            type="radio"
+            id="no-rate"
+            class="input-no-rate"
+            name="review[rating]"
+            value="1"
+            checked
+            aria-label="No rating."
+          />
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
       <div class="mb-3 mt-3">
-        <label for="comment" class="form-lable">Comments</label>
+        <label for="comment" class="form-label">Comments</label>
         <textarea
           name="review[comment]"
           id="comment"
@@ -56,20 +102,29 @@
           class="form-control"
           required
         ></textarea>
-        <div class="invalid-feedback">please Add some comments for review</div>
+        <div class="invalid-feedback">Please add some comments for review</div>
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
-
     <hr />
-    <p><b>All Review</b></p>
+    <% } %>
+  </div>
+
+  <% if (listing.reviews && listing.reviews.length > 0) { %>
+
+  <div class="col-8 offset-2">
     <div class="row">
-      <% for(review of listing.reviews) { %>
+      <p><b>All Reviews</b></p>
+      <% for (review of listing.reviews) { %>
       <div class="card col-5 ms-3 mb-3" style="width: 18rem">
         <div class="card-body">
-          <h5 class="card-title">user name</h5>
+          <h5 class="card-title">@<%= review.author.username %></h5>
+          <p
+            class="starability-result card-text"
+            data-rating="<%= review.rating %>"
+          ></p>
           <p class="card-text"><%= review.comment %></p>
-          <p class="card-text"><%= review.rating %> Stars</p>
+
           <form
             class="mb-3"
             method="POST"
@@ -81,5 +136,6 @@
       </div>
       <% } %>
     </div>
+    <% } %>
   </div>
 </div>
