--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -7,6 +7,7 @@
       action="/listings/<%= listing._id %>?_method=PUT"
       class="needs-validation"
       novalidate
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label class="form-label">Title</label>
@@ -26,15 +27,15 @@
         >
         <div class="invalid-feedback">please enter short description!</div>
       </div>
+
       <div class="mb-3">
-        <label class="form-label">Image URL</label>
-        <input
-          name="listing[image][url]"
-          type="text"
-          class="form-control"
-          value="<%= listing.image?.url %>"
-          required
-        />
+        Original Listing Image <br />
+        <img src="<%= originalImageUrl %>" />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Upload New Image</label>
+        <input name="listing[image][url]" type="file" class="form-control" />
       </div>
 
       <div class="row">
