--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,7 +2,13 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
     <h3>Create New Listing</h3>
-    <form method="POST" action="/listings" class="needs-validation" novalidate>
+    <form
+      method="POST"
+      action="/listings"
+      class="needs-validation"
+      novalidate
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label class="form-label">Title</label>
         <input
@@ -20,13 +26,14 @@
         </textarea>
         <div class="invalid-feedback">please enter short description!</div>
       </div>
+
       <div class="mb-3">
-        <label class="form-label">Image URL</label>
+        <label class="form-label">Upload Image </label>
         <input
-          name="listing[image][url]"
-          type="text"
+          name="listing[image]"
+          type="file"
           class="form-control"
-          placeholder="Enter image URL"
+          required
         />
       </div>
       <div class="row">
